# TrueHack

./: .dockerignore  .env.example  .gitignore  .lua_console_chat.json  .lua_console_chats.db  CLAUDE.md  Dockerfile  GENERATION.md  Modelfile  PREZA.md  PROGON.md  README.md  app.py  auto_fix_lua.py  check_lua.py  codex.md  config.py  console_utils.py  docker-compose.yml  edit_file.py  factory.py  generate.py  graph.py  imenno_inzhenernyy.lua  llm_client.py  lmstudio_client.py  lua_rag_templates_kb.jsonl  lua_runtime.py  main.py  openapi.yaml  otfiltruy_elementy_iz.jsonstring.txt  otfiltruy_elementy_iz.lua  prompt_verifier.py  pyproject.toml  registry.py  requirements.txt  routers.py  run_lua.py  state.py  uvelichivay_znachenie_peremennoy.jsonstring.txt  (+1 more)
.claude/: settings.local.json
agents/: base.py
config/: settings.yaml
data/: localscript.db
docker/: app-entrypoint.sh
docs/: AGENT_CONTEXT.md  C4.md  DECISIONS.md  PROJECT_STATE.md  TEST_SCENARIOS.md  Условия.md
localscript.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap_ollama.py  start.bat
src/agents/: base.py  (+12 more)
tests/: conftest.py  test_bootstrap_ollama.py  test_contract_verifier.py  test_engine.py  test_followup_routing.py  test_llm_logging.py  test_lowcode_alignment.py  test_lua_tools.py  test_pipeline_lowcode_generation.py  test_planner.py  test_planner_integration.py  test_prompt_context.py  test_rag_templates.py  test_robustness_verifier.py  test_router.py  test_runtime_state_verifier.py  test_semantic_logic_verifier.py  test_shape_type_verifier.py  test_storage.py  test_tools.py  (+2 more)
(+71 files in other folders)
